--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
-version: '3.1'
+version: "3.9"
 services:
   python:
     image: python:latest
-    command: python -m http.server 8000
-    volumes:
-      - ./src:/src
+    build: .
+    links:
+      - postgres
     ports:
       - 8000:8000
   postgres:
