--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,8 +24,16 @@ services:
       - postgres-data:/var/lib/postgresql/data
   redis:
     image: redis:latest
+    container_name: redis
+    restart: always
+    # build: 
+    #   context: .
+    #   dockerfile: Dockerfile.redis
     ports:
       - 6379:6379
+    # volumes:
+    #   - redis-data:/data
+    command: redis-server --loglevel warning --requirepass password
 volumes:
   postgres-data:
-  redis-data:
+  # redis-data:
