--- a/forecast-vite/package.json
+++ b/forecast-vite/package.json
@@ -9,10 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
+    "chartjs": "^0.3.24",
+    "flowbite": "^2.3.0",
+    "primevue": "^3.52.0",
     "vue": "^3.4.21"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
     "vue-tsc": "^2.0.6"
