--- a/forecast-vite/package.json
+++ b/forecast-vite/package.json
@@ -9,14 +9,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@canvasjs/vue-charts": "^1.0.4",
+    "@types/google.visualization": "^0.0.74",
     "axios": "^1.7.2",
+    "canvasjs": "^1.8.3",
     "chart.js": "^4.4.3",
     "chartjs": "^0.3.24",
+    "d3": "^7.9.0",
+    "echarts": "^5.5.0",
     "flowbite": "^2.3.0",
+    "highcharts": "^11.4.3",
     "primevue": "^3.52.0",
-    "vue": "^3.4.21"
+    "vue": "^3.4.21",
+    "vue-charts": "^0.2.1",
+    "vue3-charts": "^1.1.33",
+    "vue3-highcharts": "^0.1.3"
   },
   "devDependencies": {
+    "@types/canvasjs": "^1.9.11",
     "@vitejs/plugin-vue": "^5.0.4",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
