--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -24,5 +24,30 @@ services:
       - 5432:5432
     volumes:
       - postgres-data:/var/lib/postgresql/data
+  redis:
+    image: redis:latest
+    ports:
+      - 6379:6379
+  frontend:
+    image: node:latest
+    build: 
+      context: .
+      dockerfile: Dockerfile.frontend
+    ports:
+      - 3000:3000
+    volumes:
+      - .:/app
+    working_dir: /app
+    command: npm start
+    depends_on:
+      - redis
+
+  backend:
+    image: flask:latest
+    build: 
+      context: .
+      dockerfile: Dockerfile.backend
+    ports:
+      - 5000:5000
 volumes:
   postgres-data:
