Entrenando los modelos

--- a/docker/Dockerfile.backend
+++ b/docker/Dockerfile.backend
@@ -8,6 +8,5 @@ RUN pip install --no-cache-dir -r ../requirements.txt
 
 COPY . .
 
-# el servidor flask se ejecuta en el puerto 5000 y esta en /scripts/server_flask.py 
-# cmd para ejecutar el servidor
+CMD ["python", "server_flask.py"]
 
