--- a/forecast-vite/package.json
+++ b/forecast-vite/package.json
@@ -15,11 +15,14 @@
     "canvasjs": "^1.8.3",
     "chart.js": "^4.4.3",
     "chartjs": "^0.3.24",
+    "consola": "^3.2.3",
     "d3": "^7.9.0",
     "echarts": "^5.5.0",
     "flowbite": "^2.3.0",
     "highcharts": "^11.4.3",
+    "primeicons": "^7.0.0",
     "primevue": "^3.52.0",
+    "vite-plugin-style-import": "^2.0.0",
     "vue": "^3.4.21",
     "vue-charts": "^0.2.1",
     "vue3-charts": "^1.1.33",
