--- a/docker/Dockerfile.frontend
+++ b/docker/Dockerfile.frontend
@@ -1,4 +1,15 @@
 FROM node:latest
 
+WORKDIR /app
+
+COPY package.json /app
+COPY package-lock.json /app
+
+RUN npm install
+
+COPY . /app
+
+CMD ["serve", "-s", "dist", "-l", "3000"]
+
 
 
