--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,53 +1,52 @@
 version: "3"
 services:
-  python:
-    image: python:latest
-    build: 
-      context: .
-      dockerfile: Dockerfile.python
-    links:
-      - postgres
-    ports:
-      - 8000:8000
-    depends_on:
-      - postgres
-  postgres:
-    image: postgres:latest
-    build: 
-      context: .
-      dockerfile: Dockerfile.postgres
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: postgres
-    ports:
-      - 5432:5432
-    volumes:
-      - postgres-data:/var/lib/postgresql/data
   redis:
     image: redis:latest
     ports:
       - 6379:6379
-  frontend:
-    image: node:latest
     build: 
       context: .
-      dockerfile: Dockerfile.frontend
-    ports:
-      - 5173:5173
-    volumes:
-      - .:/app
-    working_dir: /app
-    command: npm start
-    depends_on:
-      - redis
-
+      dockerfile: Dockerfile.redis
   backend:
-    image: flask:latest
     build: 
-      context: .
+      context: ./backend
       dockerfile: Dockerfile.backend
     ports:
       - 5000:5000
-volumes:
-  postgres-data:
+    depends_on:
+      - redis
+  frontend:
+    build: 
+      context: ./forecast-vite
+      dockerfile: Dockerfile.frontend
+    ports:
+      - 5173:5173
+    depends_on:
+      - backend
+  # python:
+  #   image: python:latest
+  #   build: 
+  #     context: .
+  #     dockerfile: Dockerfile.python
+  #   links:
+  #     - postgres
+  #   ports:
+  #     - 8000:8000
+  #   depends_on:
+  #     - postgres
+  # postgres:
+  #   image: postgres:latest
+  #   build: 
+  #     context: .
+  #     dockerfile: Dockerfile.postgres
+  #   environment:
+  #     POSTGRES_USER: postgres
+  #     POSTGRES_PASSWORD: postgres
+  #     POSTGRES_DB: postgres
+  #   ports:
+  #     - 5432:5432
+  #   volumes:
+  #     - postgres-data:/var/lib/postgresql/data
+# volumes:
+#   postgres-data:
+
